# templates

./: .gitignore  README.md  README.rst  install.sh  source-me.sh
config/: .rubocop.yaml
config/rubocop/: default.yaml  default.yml
lib/: 1_log.zsh  2_metadata.zsh  cli.zsh  completion.zsh
metadata/: cocoapods-plugin.json  linters.json  py-package.json  rb-gem.json
scripts/: base  base.sh  init.sh  install.sh  sub  sub.py  upgrade.sh  use.sh
scripts/internal/: install.sh
templates/_metadata/: ios-app.json
templates/cocoapods-plugin/: .rubocop.yaml  .rubocop.yml  Gemfile  Makefile  README.md  cocoapods-{{name}}.gemspec  {{name}}.gemspec
templates/cocoapods-plugin/examples/: .gitignore  Makefile  Podfile  README.md
templates/cocoapods-plugin/lib/: cocoapods-{{name}}.rb  cocoapods_plugin.rb
templates/cocoapods-plugin/scripts/: sub.py
templates/ios-app/: .gitignore  Gemfile  Makefile  Podfile  README.md
templates/ios-app/{{name}}/: {{name}}App.swift
templates/ios-app/{{name}}.xcodeproj/: project.pbxproj
templates/linters/: .pre-commit-config.yaml  .rubocop.yaml  .rubocop.yml
templates/py-package/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  pyproject.toml  requirements.txt
templates/py-package/docs/: conf.py  faq.rst
templates/py-package/docs/api/: reference.rst
templates/py-package/docs/getting_started/: index.rst
templates/py-package/src/{{name}}/: cli.py
templates/rb-gem/: .pre-commit-config.yaml  Gemfile  Makefile  {{name}}.gemspec
templates/rb-gem/lib/: {{name}}.rb
(+2 files in other folders)
